tests/auto/qml/qmllint/data/useBeforeDeclaration.qml
@@ -1,0 +1,8 @@
+import QtQml
+QtObject {
+    signal sig()
+    onSig: ()=> {
+        argq = 12;
+        var argq;
+    }
+}
